Spell check update

--- a/vignettes/Vignettes.Rmd
+++ b/vignettes/Vignettes.Rmd
@@ -115,7 +115,7 @@ My_graph_degree <- degree(My_graph, v = GraphVertices, normalized = FALSE) # Cal
 Degree centrality could be also calculated for *directed* graphs via specifying the `mode` parameter.
 
 - ### Betweenness centrality
-Betweeneess centrality, like degree centrality, is one of the most commonly used centrality measures but is representative of the global centrality of a node. This centrality metric could also be  calculated 
+Betweenness centrality, like degree centrality, is one of the most commonly used centrality measures but is representative of the global centrality of a node. This centrality metric could also be  calculated 
 using a function obtained from the `igraph` package.
 
 ```{r BC}
@@ -158,7 +158,7 @@ Neighborhood connectivity could be also calculated for *directed* graphs via spe
 - ### Conditional probability of deviation from means
 
 The function `cond.prob.analysis` assesses the conditional probability of deviation of two
-centrality measures (or any other two continuous variables) from their corresponding means in oposite directions.
+centrality measures (or any other two continuous variables) from their corresponding means in opposite directions.
 
 ```{r cond.prob}
 MyData <- centrality.measures        # Preparing the data
@@ -179,23 +179,23 @@ to further test the validity of conditional probability assessments.
 
 - ### Nature of association (considering dependent and independent)
 
-The function `double.cent.assess` could be used to automaticelly assess both the distribution
+The function `double.cent.assess` could be used to automatically assess both the distribution
 mode of centrality measures (two continuous variables) and the nature of their association. The analyses done through this formula are as follows:
 
 1. **Normality assessment**:
     - Variables with **lower than** 5000 observations: *Shapiro-Wilk test*
-    - Variables with **over** 5000 observations: *Anderson-Darlin test*
+    - Variables with **over** 5000 observations: *Anderson-Darling test*
     <br><br>
 2. **Assessment of non-linear/non-monotonic correlation**:
     - *Non-linearity assessment*: Fitting a generalized additive model (GAM) with integrated smoothness approximations 
     using the `mgcv` package
         <br><br>
-    - *Non-monotonicity assessment*: Comaring the squared coefficients of the correlation based on Spearman's rank 
+    - *Non-monotonicity assessment*: Comparing the squared coefficients of the correlation based on Spearman's rank 
     correlation analysis and ranked regression test with non-linear splines.
         - Squared coefficient of Spearman's rank correlation **>** R-squared ranked regression with non-linear splines: *Monotonic*
         - Squared coefficient of Spearman's rank correlation **<** R-squared ranked regression with non-linear splines: *Non-monotonic*
     <br><br>
-3. **Dependemnce assessment**:
+3. **Dependence assessment**:
     - *Hoeffding’s independence test*: Hoeffding's test of independence is a test based on the population 
     measure of deviation from independence which computes a D Statistics ranging from -0.5 to 1: Greater D values 
     indicate a higher dependence between variables.
@@ -207,7 +207,7 @@ As the correlation between most of the centrality measures follows a non-monoton
 is done based on the non-linear non-parametric statistics (NNS) which itself calculates the correlation based on partial moments and outputs a correlation value ranging from -1 to 1. For further details please refer to [NNS: Nonlinear Nonparametric Statistics](https://cran.r-project.org/package=NNS).
         <br><br>
 5. **Assessment of conditional probability of deviation from means**
-This step assesses the conditional probability of deviation of two centrality measures (or any other two continuous variables) from their corresponding means in oposite directions.
+This step assesses the conditional probability of deviation of two centrality measures (or any other two continuous variables) from their corresponding means in opposite directions.
     - The independent centrality measure (variable) is considered as the condition variable and the other as the desired one.
     - As you will see in the results, the whole data is also randomly splitted into half in order 
 to further test the validity of conditional probability assessments.
@@ -231,14 +231,14 @@ certain degree of freedom, based on the size and correlation mode of the variabl
 
 - ### Nature of association (without considering dependence direction)
 
-The function `double.cent.assess.noRegression` could be used to automaticelly assess both the distribution
+The function `double.cent.assess.noRegression` could be used to automatically assess both the distribution
 mode of centrality measures (two continuous variables) and the nature of their association. The analyses done through this formula are as follows:
 
 1. **Normality assessment**:
     - Variables with **lower than** 5000 observations: *Shapiro-Wilk test*
-    - Variables with **over** 5000 observations: *Anderson-Darlin test*
+    - Variables with **over** 5000 observations: *Anderson–Darling test*
     <br><br>
-2. **Dependemnce assessment**:
+2. **Dependence assessment**:
     - *Hoeffding’s independence test*: Hoeffding's test of independence is a test based on the population 
     measure of deviation from independence which computes a D Statistics ranging from -0.5 to 1: Greater D values 
     indicate a higher dependence between variables.
@@ -250,7 +250,7 @@ As the correlation between most of the centrality measures follows a non-monoton
 is done based on the non-linear non-parametric statistics (NNS) which itself calculates the correlation based on partial moments and outputs a correlation value ranging from -1 to 1. For further details please refer to [NNS: Nonlinear Nonparametric Statistics](https://cran.r-project.org/package=NNS).
         <br><br>
 4. **Assessment of conditional probability of deviation from means**
-This step assesses the conditional probability of deviation of two centrality measures (or any other two continuous variables) from their corresponding means in oposite directions.
+This step assesses the conditional probability of deviation of two centrality measures (or any other two continuous variables) from their corresponding means in opposite directions.
     - The `centrality2` variable is considered as the condition variable and the other (`centrality1`) as the desired one.
     - As you will see in the results, the whole data is also randomly splitted into half in order 
 to further test the validity of conditional probability assessments.
@@ -310,7 +310,7 @@ print(My.metrics.assessment)
 
 **IHS**
     : `IHS` is the first integrative method for the identification of network hubs. The `IHS` formula integrates three
-    network centrality meassure including degree centrality, betweenness centrality, and neighborhood connectivity in
+    network centrality measure including degree centrality, betweenness centrality, and neighborhood connectivity in
     such a way that both synergize their effects and remove their biases.
     
 ```{r ihs}
