--- a/vignettes/Vignettes.Rmd
+++ b/vignettes/Vignettes.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Introduction to influential"
 subtitle: "*Identification and classification of the most influential nodes*"
-author: '`r paste("Abbas (Adrian) Salavaty",strftime(Sys.time(),format="%d-%b-%Y"))`'
+author: '`r paste("Adrian Salavaty",strftime(Sys.time(),format="%d-%b-%Y"))`'
 output:
   rmarkdown::html_vignette:
     css: influentialVignette.css
